# forecast-rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
forecast/: Cargo.toml
forecast/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241104_023919_create_cities_table.rs
src/: errors.rs  main.rs
src/api/: weather.rs
src/entities/: cities.rs  mod.rs  prelude.rs
src/handlers/: mod.rs  pages.rs  stats.rs  weather.rs
src/repositories/: city_repository.rs  mod.rs
src/services/: mod.rs  weather_service.rs
templates/: base.html  index.html  stats.html  weather.html
