[package]
name = "forecast-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.9"
axum-macros = "0.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
log = "0.4.20"
env_logger = { version = "0.11.5", features = ["auto-color"] }
hyper = "1.5.1"
time = { version = "0.3.36", features = ["formatting"] }
chrono = "0.4.38"
bytes = "1.9.0"
tracing = "0.1.41"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-case = "3.3.1"
insta = "1.41.1"
ctor = "0.2.9"
tokio-test = "0.4.4"
wiremock = "0.6.2"
tempfile = "3.14.0"
sea-orm-cli = { version = "1.1.1", features = ["runtime-tokio"] }
axum-test = "16.4.0"

[workspace]
members = [
    ".",
    "migration"
]

[profile.dev]
opt-level = 0
