[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.208"
sqlx = { version = "0.8.0", features = ["runtime-tokio"] }
tokio= { version = "1.39.3", features = ["full"] }
tracing-subscriber = "0.3.18"